Bug 390886 - cumbersome creation of notes
Summary: cumbersome creation of notes
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.24.1 (KDE Applications 17.12.1)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-22 07:11 UTC by Ralf Habacker
Modified: 2018-04-17 21:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.24.80 (KDE Applications 18.03.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-02-22 07:11:22 UTC
Adding a note to a diagram with a style (colors, font) different from the diagram settings is not directly possible. There are additional steps required to achieve this.

How to reproduce ?
1. start umbrello
2. Add a note to the diagram

What happens ?
A note is added without any text. To set text you need to enter text into the documentation window or select "change text" in the context menu entry or select "color" afterwards to change color.

What is expected ?
After selecting the note tool and mouse click on a diagram a dialog should come up making it possible to enter the related settings (text, style, font) directly into the dialog)
Comment 1 Ralf Habacker 2018-02-22 13:40:53 UTC
Git commit a639f4846500933d1416ac8d1a1d2cf9e29c3cb1 by Ralf Habacker.
Committed on 22/02/2018 at 13:23.
Pushed by habacker into branch 'master'.

Fix 'cumbersome creation of notes'
FIXED-IN:2.24.80 (KDE Applications 18.03.80)

M  +5    -0    umbrello/toolbarstateother.cpp

https://commits.kde.org/umbrello/a639f4846500933d1416ac8d1a1d2cf9e29c3cb1
Comment 2 Ralf Habacker 2018-02-22 13:40:54 UTC
Git commit e2cb1434e7244397a31d0345eba256fe0dc0b6de by Ralf Habacker.
Committed on 22/02/2018 at 13:23.
Pushed by habacker into branch 'master'.

Add property dialog for notes

- Add general properties page for note widgets
- Let class NoteDialog be a multi page dialog
- Added general, style and font page to note dialog

M  +1    -0    umbrello/CMakeLists.txt
M  +18   -0    umbrello/dialogs/multipagedialogbase.cpp
M  +5    -0    umbrello/dialogs/multipagedialogbase.h
M  +21   -29   umbrello/dialogs/notedialog.cpp
M  +10   -10   umbrello/dialogs/notedialog.h
C  +9    -14   umbrello/dialogs/pages/notepage.cpp [from: umbrello/dialogs/notedialog.cpp - 069% similarity]
C  +11   -12   umbrello/dialogs/pages/notepage.h [from: umbrello/dialogs/notedialog.h - 070% similarity]
M  +1    -0    umbrello/listpopupmenu.cpp
M  +1    -0    umbrello/umlwidgets/notewidget.cpp
M  +1    -0    umbrello/umlwidgets/notewidget.h

https://commits.kde.org/umbrello/e2cb1434e7244397a31d0345eba256fe0dc0b6de
Comment 3 Ralf Habacker 2018-04-17 21:58:01 UTC
Git commit 36707ffd9f1ed5b3fed718845440d14a0223f662 by Ralf Habacker.
Committed on 17/04/2018 at 21:55.
Pushed by habacker into branch 'master'.

Fix not opening note property widget on double click of a note widget

M  +1    -1    umbrello/umlwidgets/notewidget.cpp

https://commits.kde.org/umbrello/36707ffd9f1ed5b3fed718845440d14a0223f662