Fix 'cumbersome creation of notes'

BUG:390886
FIXED-IN:2.24.80 (KDE Applications 18.03.80)